--- a/web/projeler/pisi/pisi/node_1.html
+++ b/web/projeler/pisi/pisi/node_1.html
@@ -49,24 +49,22 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
 <H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Giriş</H2>
-Paket, bir uygulamayı ya da işletim sisteminin bir parçasını tüm bileşenleriyle
-toplu olarak ifade eden bir kavramdır. Uygulamaların bir yerden bir
-yere taşınması (örneğin bir CD yada ağ kaynağından gelip, sisteme
-kurulması) sırasında bazı bileşenlerin geride unutulmamasını sağlar.
-Bir sistemdeki onbinlerce dosyayı, görevleri ve ait oldukları uygulamalar
-bazında birkaç yüz pakete ayırarak yönetilebilir kılar. Kullanıcının
-büyük bir sistemde neler bulunduğuna hakim olabilmesini kolaylaştırır.<BR>
+Bu belge Ulusal Dağıtım projesi kapsamında geliştirilen PİSİ paket
+yönetim sistemin, hangi amaçlar ve gerekler ile geliştirildiğini,
+genel yapısını ve mimarisini anlatır.<BR>
 <BR>
-Bu paketleri kurup kaldırmak, çeşitli kaynaklardan temin etmek, sorgulamak,
-sistemdeki değişiklikleri takip etmek için, paket yöneticisi adını
-verdiğimiz bir uygulamaya ihtiyaç vardır.<BR>
+Belgenin hedef kitlesi PİSİ sistemini yakından tanımak isteyen kullanıcılar,
+sistem yöneticileri ve PİSİ üzerinde çalışmak isteyen geliştiricilerdir.
+Belge bir son kullanıcı belgesi değildir. Belge kapsamında ele alınan
+konuları kavrayabilmek için yer yer paket yönetim sistemleri konusunda
+genel bilgi ve diğer paket yönetim sistemleri üzerinde deneyim gerekmektedir.
+<BR>
 <BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='index.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_2.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
