--- a/web/projeler/pisi/pisi/node_10.html
+++ b/web/projeler/pisi/pisi/node_10.html
@@ -49,13 +49,41 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H5>PISI</H5>
+<H2><A NAME="htoc10">4</A>&nbsp;&nbsp;PİSİ Tasarımı</H2>
+
+<H3><A NAME="htoc11">4.1</A>&nbsp;&nbsp;Paket Oluşturma</H3>
+Bu kısımda bir <B>PİSİ</B> paketinin oluşturulması ve kullanılması
+esnasında gerek duyulacak meta dosyalar ve süreçler netleştirilmeye
+çalışılmıştır.<BR>
+<BR>
+
+<H4><A NAME="htoc12">4.1.1</A>&nbsp;&nbsp;PSPEC Dosyası</H4>
+<B>PSPEC (PİSİ SPECification)</B> dosyası paketin oluşturulması
+için gerekli olan temel bilgiyi tanımlar. Oluşturulacak paketin ne
+olduğu, kaynağı, kim tarafından paketlendiği, kaynağa uygulanan yamalar,
+hangi başka paketlere ne tür bağımlılıklar içerdiği gibi bilgileri
+içerir.<BR>
+<BR>
+Bir <B>PSPEC</B> dosyasından, dolayısı ile bir kaynaktan birden
+fazla paket oluşturulabilir. Örneğin kcontrol paketi kdebase-kaynaksürümü.paketsürümü.tar.gz
+kaynağından oluşturulabilecek yalnızca bir pakettir.<BR>
+<BR>
+Dosya biçimi XML'dir ve aşağıdaki etiketleri içerir. Her <B>PSPEC</B>
+dosyasında tüm etiketlerin bulunması zorunlu değildir. Bulunması zorunlu
+olan etiketler aşağıda (*) ile belirtilmiştir.<BR>
+<BR>
+<B>PSPEC</B> dosyaları <B>PSPEC</B> deposunda pakete ait dizinde
+<B>pspec.xml</B> adı ile tutulurlar.<BR>
+<BR>
+Her <B>PSPEC</B> dosyası <B>PİSİ</B> etiketi (tag) altında bir
+<EM>Source</EM> ve en az bir <EM>Package</EM> olmak üzere iki
+ana bölüm içermek zorundadırlar.<BR>
+<BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_9.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_11.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
