--- a/web/projeler/pisi/pisi/node_17.html
+++ b/web/projeler/pisi/pisi/node_17.html
@@ -49,56 +49,26 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H5>Package</H5>
+<H5>Source: Bu bölümdeki bilgiler PSPEC dosyasının
+<EM>Source</EM> bölümünden alınır.</H5><!--SEC END -->
+
 <UL><LI>
 <B>Name</B>
+<LI><B>Homepage</B>
 <LI><B>Summary</B>
 <LI><B>Description</B>
-<LI><B>License</B>
-<LI><B>History</B>
+<LI><B>Packager</B>
 <UL><LI>
-<B>Update</B>
-<UL><LI>
-<B>Type</B>
-<LI><B>Date</B>
-<LI><B>Version</B>
-<LI><B>Release</B>
+<B>Name</B>
+<LI><B>Email</B>
 </UL>
 </UL>
-<LI><B>Conflicts</B>
-<LI><B>Provides:</B> Paketin hangi OM bacaklarını sağladığını belirtir.
-<LI><B>RuntimeDependencies</B>
-<UL><LI>
-<B>Dependency</B>
-<LI><B>InstallDependencies</B>
-<UL><LI>
-<B>Dependency</B>
-</UL>
-<LI><B>Files</B>
-<UL><LI>
-<B>Path</B>
-</UL>
-<LI><B>Distribution:</B> Paketin ait olduğu dağıtımı belirtir (Pardus).
-<LI><B>DistributionRelease:</B> Paketin ait olduğu dağıtımın hangi sürümü
-için oluşturduğunu belirtir (1.0).
-<LI><B>Architecture:</B> Paketin hangi mimari için yapıldığını belirtir.
-<LI><B>InstallSize:</B> Paketin sisteme kurulduğunda kaplayacağı alanın
-tahmini boyutunu belirtir.
-</UL>
-</UL>
-Yukarıda tanımlanan <B>Metadata</B> dosyası, belirlenecek paket
-formatının içinde <B><EM>XML</EM></B> dosyası olarak tutulacaktır.
-<B>Metadata</B> XML dosyalarının yapısı <B>PSPEC</B> dosyası ile
-hemen hemen aynıdır. Yalnızca Metadata paket oluşumundan sonra elimizde
-olan bazı ek bilgileri de içerir. <BR>
-<BR>
-<UL><LI><A HREF='./node_18.html'>files.xml</A></LI><LI><A HREF='./node_19.html'>PSPEC Deposu</A></LI><UL><LI><A HREF='./node_19.html'>Örnek PSPEC Deposu Sıradüzeni</A></LI></UL><LI><A HREF='./node_20.html'>Category ( IsA )</A></LI><LI><A HREF='./node_21.html'>Component ( PartOf )</A></LI><LI><A HREF='./node_22.html'>İkili Paket Deposu</A></LI><LI><A HREF='./node_23.html'>PİSİ Paketinin Yapısı</A></LI><LI><A HREF='./node_24.html'>Süreçlerin Tarifi</A></LI><UL><LI><A HREF='./node_25.html'>Paket Oluşturmak</A></LI><LI><A HREF='./node_26.html'>Paket Kurmak </A></LI><LI><A HREF='./node_27.html'>Paket Kaldırmak</A></LI><LI><A HREF='./node_28.html'>Bağımlılık çözmek</A></LI></UL><LI><A HREF='./node_29.html'>Veritabanları</A></LI><UL><LI><A HREF='./node_29.html'>Kurulum Veritabanı</A></LI><LI><A HREF='./node_29.html'>Depo Veritabanları</A></LI><LI><A HREF='./node_29.html'>Kaynak Veritabanları</A></LI></UL><LI><A HREF='./node_30.html'>libpisi</A></LI><LI><A HREF='./node_31.html'>PİSİ Package Builder (GUI)</A></LI></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
