--- a/web/projeler/pisi/pisi/node_18.html
+++ b/web/projeler/pisi/pisi/node_18.html
@@ -49,48 +49,49 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc15">4.3</A>&nbsp;&nbsp;files.xml</H3>
-Kaynak derlendikten sonra oluşan dosyaların oluşturulan pakete göre
-<B>(Package)</B> sınıflandırılması gerekmektedir. Tek bir kaynaktan
-birden fazla paket oluşturulması, kaynağın derlenmesinden sonra oluşan
-dosyaların sınıflandırılması ile olur.<BR>
-<BR>
-files.xml dosyası paket geliştirme aracı/araçları ile oluşturularak
-paket içerisine yerleştirilir.
+<H5>Package</H5>
 <UL><LI>
-<B>Files</B>
+<B>Name</B>
+<LI><B>Summary</B>
+<LI><B>Description</B>
+<LI><B>License</B>
+<LI><B>History</B>
 <UL><LI>
-<B>Package:</B> Dosya serisinin hangi <B><EM>SubPackage</EM></B>'i
-oluşturduğunu belirtir. (örn. mysql-devel, mysql-client, mysql-server
-, mysql-doc)
-<LI><B>File:</B> Pakete dahil edilecek bir dosyayı tarif eder.
+<B>Update</B>
 <UL><LI>
-<B>Path:</B> Dosyanın, paket içerisindeki yerini belirtir. <B>PISI</B>
-gereklerinden biri paketin belirtilen konuma kurulabilmesi olduğu
-için konum bilgisi bağımlı (rölatif) olarak verilir.
-<LI><B>Type</B><A NAME="FType"></A><B>:</B> Dosyanın tipini belirtir. Paket sisteme
-kurulduğunda, veritabanına bu tip tanımı ile işaretlenerek yerleştirilecektir.
-Bu tip tanımları şunlardan birisi olabileceği gibi boş da bırakılabilir:
-executable, conf, doc, sharedLib, localeData, programData,
-header.
-<LI><B>Size:</B> Dosyanın byte cinsinden boyutunu saklar.
-<LI><B>SHA1Sum: Path</B> ile belirtilen dosyanın SHA1 algoritması ile
-elde edilmiş <EM>cryptographic</EM> özet değerini saklar.
+<B>Type</B>
+<LI><B>Date</B>
+<LI><B>Version</B>
+<LI><B>Release</B>
 </UL>
 </UL>
+<LI><B>Conflicts</B>
+<LI><B>Provides:</B> Paketin hangi OM bacaklarını sağladığını belirtir.
+<LI><B>RuntimeDependencies</B>
+<LI><B>Dependency</B>
+<LI><B>Files</B>
+<UL><LI>
+<B>Path</B>
 </UL>
-files.xml dosyalarının doğrulanması için kullanılabilecek bilgi <EM>pisi-files.dtd</EM>
-dosyasında tanımlanmıştır.<BR>
+<LI><B>Distribution:</B> Paketin ait olduğu dağıtımı belirtir (Pardus).
+<LI><B>DistributionRelease:</B> Paketin ait olduğu dağıtımın hangi sürümü
+için oluşturduğunu belirtir (1.0).
+<LI><B>Architecture:</B> Paketin hangi mimari için yapıldığını belirtir.
+<LI><B>InstallSize:</B> Paketin sisteme kurulduğunda kaplayacağı alanın
+tahmini boyutunu belirtir.
+</UL>
+Yukarıda tanımlanan <B>Metadata</B> dosyası, belirlenecek paket
+formatının içinde <B><EM>XML</EM></B> dosyası olarak tutulacaktır.
+<B>Metadata</B> XML dosyalarının yapısı <B>PSPEC</B> dosyası ile
+hemen hemen aynıdır. Yalnızca Metadata paket oluşumundan sonra elimizde
+olan bazı ek bilgileri de içerir. <BR>
 <BR>
-TODO: Örnek <BR>
-<BR>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_17.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<UL><LI><A HREF='./node_19.html'>files.xml</A></LI><LI><A HREF='./node_20.html'>PSPEC Deposu</A></LI><UL><LI><A HREF='./node_20.html'>Örnek PSPEC Deposu Sıradüzeni</A></LI></UL><LI><A HREF='./node_21.html'>Category ( IsA )</A></LI><LI><A HREF='./node_22.html'>Component ( PartOf )</A></LI><LI><A HREF='./node_23.html'>İkili Paket Deposu</A></LI><LI><A HREF='./node_24.html'>PİSİ Paketinin Yapısı</A></LI><LI><A HREF='./node_25.html'>Süreçlerin Tarifi</A></LI><UL><LI><A HREF='./node_26.html'>Paket Oluşturmak</A></LI><LI><A HREF='./node_27.html'>Paket Kurmak </A></LI><LI><A HREF='./node_28.html'>Paket Kaldırmak</A></LI><LI><A HREF='./node_29.html'>Bağımlılık çözmek</A></LI></UL><LI><A HREF='./node_30.html'>Veritabanları</A></LI><UL><LI><A HREF='./node_30.html'>Kurulum Veritabanı</A></LI><LI><A HREF='./node_30.html'>Depo Veritabanları</A></LI><LI><A HREF='./node_30.html'>Kaynak Veritabanları</A></LI></UL><LI><A HREF='./node_31.html'>libpisi</A></LI><LI><A HREF='./node_32.html'>PİSİ Package Builder (GUI)</A></LI></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_17.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
