--- a/web/projeler/pisi/pisi/node_29.html
+++ b/web/projeler/pisi/pisi/node_29.html
@@ -49,38 +49,25 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc27">4.10</A>&nbsp;&nbsp;Veritabanları</H3>
-FIXME: Ayrıntılı tanım eklenecek<BR>
+<H4><A NAME="htoc27">4.9.4</A>&nbsp;&nbsp;Bağımlılık çözmek</H4>
+TODO: Ayrıntılı algoritmik anlatım gerekiyor<BR>
 <BR>
-İstemci makinadaki paket veritabanı aşağıdaki bölümlere sahip olacaktır.
-Veritabanları <B><EM>BerkeleyDB</EM></B> veritabanlarıdır.<BR>
+<B>PİSİ</B> içerisinde paket bağımlılığı, doğrudan paket isim ve
+sürüm numarasına bağımlılık olarak tanımlanmıştır. Bu yüzden paket
+bağımlılığının çözümü depo veritabanından bağımlılığı oluşturan paketleri
+iteratif olarak çıkarmak ile sınırlıdır.<BR>
 <BR>
-Beta versiyonda tek bir depo desteklenecektir.
-<UL><LI>
-<B>Kurulu Paketler Veritabanı:</B> <EM>Paket adı, sürüm numarası,
-hangi depodan kurulduğu ve dosyalar (files.xml)</EM> bölümlerini içerecektir.
-<LI><B>Depo Veritabanları:</B> Birden fazla depo veritabanı olabilir.
-Her depo için <B>pisi-index.xml</B> dosyası içeriği depo veritabanına
-aktarılacaktır.
-<LI><B>Kaynak Veritabanları</B>
-</UL>
-
-<H4><A NAME="htoc28">4.10.1</A>&nbsp;&nbsp;Kurulum Veritabanı</H4>
-FIXME: Ayrıntılı tanım eklenecek<BR>
-<BR>
-
-<H4><A NAME="htoc29">4.10.2</A>&nbsp;&nbsp;Depo Veritabanları</H4>
-FIXME: Ayrıntılı tanım eklenecek<BR>
-<BR>
-
-<H4><A NAME="htoc30">4.10.3</A>&nbsp;&nbsp;Kaynak Veritabanları</H4>
-FIXME: Ayrıntılı tanım eklenecek<BR>
+Paketler için tanımlanan bir diğer bağımlılık tipi ise <B>ÇOMAR
+OM</B> (Object Model) bacaklarına olan bağımlılıktır. Bu bağımlılığın
+çözümü için Kurulu Paketler ve Depo veritabanları sorgulanarak ilgili
+<B>OM</B> bacağını sağlayan bir paketin sistemde kurulu durumda
+olup olmadığı bilgisi çıkartılır. Eğer yoksa ilgili <B>OM</B> bacağını
+sağlayan paketlerin bir listesi sunulur.<BR>
 <BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_28.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_30.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
