--- a/web/projeler/pisi/pisi/node_32.html
+++ b/web/projeler/pisi/pisi/node_32.html
@@ -45,7 +45,7 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_21.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_31.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_33.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
 <H1 ALIGN=center>PISI<BR>
@@ -54,48 +54,14 @@
 <H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc17">4.4</A>&nbsp;&nbsp;PSPEC Deposu</H3>
-Paketleri oluşturmak için gerekli <B>PSPEC</B> dosyaları hiyerarşik
-bir yapıda bir <EM>subversion</EM> deposunda sunulacaktır. Geliştirme
-işlemleri bu depo üzerinde yapılacaktır. <B>PSPEC</B> deposunda
-paketler <EM>``</EM><B>ilk harflerine göre</B><EM>''</EM> konumlandırılırlar.
-Her paket kendine ait bir dizinde <B>PSPEC</B> dosyası, paket oluşturma
-için gerekli olan ek dosyalar ve yamaların içinde bulunduğu files<B>/</B>
-dizini ve paket oluşturmada kullanılacak betiklerin bulunduğu actions<B>/</B>
-dizinine sahiptir.<BR>
-<BR>
-Bir geliştiricinin <B>Pardus Linux</B>'a paket yapması için yalnızca
-<B>PSPEC</B> depo sıradüzeninde paket için gerekli olan dosyaları
-sağlaması yeterlidir. <B>Pardus Linux</B>'un belirli zamanlarda
-kullanıcılara sunulacak sürümlerini oluşturmak için bu <B>PSPEC</B>
-deposundaki bu bilgiler kullanılarak <B>PİSİ</B> paketleri oluşturulacaktır. <BR>
-<BR>
-Bir yazılımın birden fazla sürümünün depoya eklenmesi gerekiyorsa,
-farklı paket isimleri ile depoya yerleştirilirler. (gtk1, gtk2 gibi...)<BR>
-<BR>
-
-<H4><A NAME="htoc18">4.4.1</A>&nbsp;&nbsp;Örnek PSPEC Deposu Sıradüzeni</H4>
+<H3><A NAME="htoc33">4.12</A>&nbsp;&nbsp;PİSİ Package Builder (GUI)</H3>
 <UL><LI>
-<B>a</B>/
-<UL><LI>
-<B>a</B>cpid/
-<UL><LI>
-pspec.xml
-<LI>actions.py
-<LI>ChangeLog
-<LI><B>files/</B>
-<UL><LI>
-acpid.init
-<LI>acpid-1.0.2-branch.patch
+<B>PSPEC</B> dosyasını kullanıcının tanımları doğrultusunda oluşturacak
+<LI>Action betiklerini kullanıcıya yazdıracak
+<LI>files.xml dosyasını/dosyalarını oluşturacak.
+<LI>libpisi kullanarak paket oluşturacak.
 </UL>
-<LI><B>comar/</B>
-<UL><LI>
-acpid.csl
-</UL>
-</UL>
-</UL>
-</UL>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_21.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_31.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_33.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
