--- a/web/projeler/pisi/pisi/node_33.html
+++ b/web/projeler/pisi/pisi/node_33.html
@@ -45,7 +45,7 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_21.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_32.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
 
 
 <H1 ALIGN=center>PISI<BR>
@@ -54,48 +54,20 @@
 <H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc17">4.4</A>&nbsp;&nbsp;PSPEC Deposu</H3>
-Paketleri oluşturmak için gerekli <B>PSPEC</B> dosyaları hiyerarşik
-bir yapıda bir <EM>subversion</EM> deposunda sunulacaktır. Geliştirme
-işlemleri bu depo üzerinde yapılacaktır. <B>PSPEC</B> deposunda
-paketler <EM>``</EM><B>ilk harflerine göre</B><EM>''</EM> konumlandırılırlar.
-Her paket kendine ait bir dizinde <B>PSPEC</B> dosyası, paket oluşturma
-için gerekli olan ek dosyalar ve yamaların içinde bulunduğu files<B>/</B>
-dizini ve paket oluşturmada kullanılacak betiklerin bulunduğu actions<B>/</B>
-dizinine sahiptir.<BR>
-<BR>
-Bir geliştiricinin <B>Pardus Linux</B>'a paket yapması için yalnızca
-<B>PSPEC</B> depo sıradüzeninde paket için gerekli olan dosyaları
-sağlaması yeterlidir. <B>Pardus Linux</B>'un belirli zamanlarda
-kullanıcılara sunulacak sürümlerini oluşturmak için bu <B>PSPEC</B>
-deposundaki bu bilgiler kullanılarak <B>PİSİ</B> paketleri oluşturulacaktır. <BR>
-<BR>
-Bir yazılımın birden fazla sürümünün depoya eklenmesi gerekiyorsa,
-farklı paket isimleri ile depoya yerleştirilirler. (gtk1, gtk2 gibi...)<BR>
-<BR>
-
-<H4><A NAME="htoc18">4.4.1</A>&nbsp;&nbsp;Örnek PSPEC Deposu Sıradüzeni</H4>
+<H2><A NAME="htoc34">5</A>&nbsp;&nbsp;Emeği Geçenler</H2>
+İsim sırası ile;
 <UL><LI>
-<B>a</B>/
-<UL><LI>
-<B>a</B>cpid/
-<UL><LI>
-pspec.xml
-<LI>actions.py
-<LI>ChangeLog
-<LI><B>files/</B>
-<UL><LI>
-acpid.init
-<LI>acpid-1.0.2-branch.patch
+S. Çağlar Onur
+<LI>Eray Özkural
+<LI>Gürer Özen
+<LI>A. Murat Eren
+<LI>Onur Küçük
 </UL>
-<LI><B>comar/</B>
-<UL><LI>
-acpid.csl
-</UL>
-</UL>
-</UL>
-</UL>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_19.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_21.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<!--BEGIN NOTES document-->
+<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="node_4.html#text1"><FONT SIZE=5>1</FONT></A><DD><A HREF="http://www.uludag.org.tr/belgeler/okuryazar/okuryazar.html"><TT>http://www.uludag.org.tr/belgeler/okuryazar/okuryazar.html</TT></A>
+</DL>
+<!--END NOTES-->
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_32.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
