--- a/web/projeler/pisi/pisi/node_4.html
+++ b/web/projeler/pisi/pisi/node_4.html
@@ -49,25 +49,75 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Paketleyici/Geliştirici Gereksinimleri</H3>
+<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Kullanıcı Gereksinimleri</H3>
+Kullanıcı gereksinimleri, bilişim okuryazarı olarak daha önce tanımladığımız<SUP><A NAME="text1" HREF="node_33.html#note1">1</A></SUP> kullanıcı profiline bağlı kalınarak çıkarılmıştır.
 <UL><LI>
-Paket hazırlamak kolay olmalıdır. Paket hazırlanırken ve inşa edilirken
-gerekli dosyalar bir çok ayrı kaynaktan temin edilebilmelidir. 
-<LI>Pakete ait bilgiler iyi tanımlanmış bir formatta, kolayca erişilebilir
-olarak tutulmalıdır. Böylece paketleri işleyen araçlar yapmak kolaylaşacak,
-ilerde veri bağımlılığı sorunları olmayacaktır.
-<LI>Kolayca paket oluşturabilmek için, tercihen bir grafik arayüz ile
-paket hazırlanabilmelidir. Paket yöneticisi, üst geliştirici kodunu
-alıp, gerekli bilgileri hazırlatacak, gerekli işaretlemeleri kolayca
-yapabilecek bir araç sunmalıdır.
-<LI>Paket yöneticisinin geliştirme sistemi, paketleyici hatalarının gözden
-kaçmasını zorlaştıracak araçlar sunmalıdır.
+Bilişim okuryazarının temel isteği, sisteme istediği uygulamaları
+kolayca kurabilmekten ibarettir.
+<UL><LI>
+Kur emri, komut satırından, grafik arayüzlerden, ya da sistemin otomatik
+olarak bir pakete ihtiyaç olduğunu saptamasıyla kolayca verilebilmeli,
+bu görev mümkün olduğunca soru sorulmadan ve kullanıcıyı rahatsız
+etmeden yerine getirilmelidir.
+<LI>Kullanıcı, paketin sistemde doğru şekilde çalışabilmesi için gerekli
+olan yapılandırma gereksinimlerinin karşılanmasından mümkün olduğunca
+yalıtılmalıdır. Yapılandırma ile ilgili görevler paket yöneticisi
+dışındaki bir araçla otomatik sağlanmalı, ya da kullanıcının verdiği
+emirlerle sonradan yapılabilmelidir. 
+<LI>Kurulum mümkün olduğunca hızlı olmalıdır.
+</UL>
+<LI>Kurulu programların yeni sürümleri çıktıkça, veya üzerinde düzeltmeler
+ve güvenlik onarımları yapılmış yeni paket sürümleri yayımlandıkça,
+kullanıcı elindeki uygulamaları güncellemek isteyecektir.
+<UL><LI>
+Kullanıcı vakti yada ağ bağlantı hızı yetersiz olduğunda acil önem
+taşıyan ve yapılması gerekli güncellemeleri, diğerlerinden kolayca
+ayırabilmelidir; bunun yapılabilmesi için paketin her sürümündeki
+güncellemelerin önem derecesi (yeni özellikler, hata düzeltmeleri,
+güvenlik açığı düzeltmesi) paketleme esnasında belirtilebilmelidir.
+<LI>Bir paketin eski veya deneysel sürümlerini kurmak bilişim okuryazarının
+bir ihtiyacı değildir. Dolayısıyla eski sürümler ve geliştirme sürümleri
+alternatifleri ile kullanıcının kafasının karıştırılmaması için; kullanıcı
+paketler deposunda her eriştiğinde en son düzeltmeleri içeren son
+ve tek bir sürüme ulaşabilmelidir. Bu hem basitlik sağlar, hem de
+kullanıcının istemeyerek yanlış bir paket kurmasının önüne geçer.
+<LI>Paket güncelleme ile ilgili paket bazında ayrı ayrı politikalar belirlenmesi
+yukarda bahsedilen kullanıcı profilinden bakıldığında gereksiz ve
+kafa karıştırıcıdır.
+</UL>
+<LI>Nerdeyse her uygulama kendi sürüm numarası verme politikasına sahip
+olduğundan, paketin asıl sürüm numarası yanında, düzenli olarak artacak
+bir numara daha vererek, kullanıcının kolayca hangi sürümlerin yeni
+olduğunu ayırt edebilmesi sağlanabilmelidir (aynı uygulama sürümünün
+çeşitli hata düzeltmeleri içeren farklı paket sürümleri olabileceği
+de düşünülürse bunun önemi daha net bir şekilde ortaya çıkmaktadır).
+<LI>Kullanıcı, artık ihtiyaç duymadığı bir uygulamayı, yer ve takip tasarrufu
+amacıyla kaldırmak isteyebilir. Kullanıcının bu seçimi kolayca yapabilmesi
+için, hiç bir paket tarafından ihtiyaç duyulmayan paketler, kurulu
+paketlerin kapladığı alan gibi bilgiler paket yöneticisinden kolayca
+alınabilmelidir.
+<LI>Kullanıcı sistemde nelerin kurulu olduğunu, hangi paketleri kurabileceğini,
+kurulu paketlere ait bilgileri, sistemdeki bir bileşen veya dosyanın
+hangi uygulamaya ait olduğunu ve benzeri paket yöneticisinden kolayca
+alabilmelidir.
+<LI>Paketler farklı hedeflere kurulabilecek biçimde ``<EM>relocatable</EM>''
+özellik taşımalıdır (bu, farklı hedeflere kurulum, ya da başkasına
+ait sistemde ev dizinine kurulum gibi yeteneklerin sağlanması için
+gereklidir).
+<LI>Paket bileşenlerinin değişip değişmediği kontrol toplamları, özet
+fonksiyonları yardımıyla tespit edilebilmelidir. Paket yöneticisinin
+böyle bir durumu kontrol edebilmesi, ve örneğin bir kullanıcı hatası
+sonucu silinen/değişen dosyaları tekrar temin edip düzeltebilmesi
+kullanıcıya kolaylık sağlar.
+<LI>Uygulamayı kod olarak çekip, sisteme özel değişik ayarlar ile derleyebilecek
+Gentoo benzeri bir özellik gereklerimiz arasında değildir. Bu tür
+bir özellik aynı kodun farklı makinalarda farklı ikili paketler oluşturmasına
+ve teknik destek sağlamanın zorlaşmasına yol açacaktır.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_5.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
