--- a/web/projeler/pisi/pisi/node_5.html
+++ b/web/projeler/pisi/pisi/node_5.html
@@ -49,33 +49,24 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;Paket Kaynağı Gereksinimleri</H3>
+<H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;Paketleyici/Geliştirici Gereksinimleri</H3>
 <UL><LI>
-Paketler CD, Internet, uzak dosya sistemi gibi çeşitli kaynaklardan
-kurulabilmelidir. Temel olarak iki tip kaynak sözkonusudur.
-<LI>İlk tip, pakedi tek bir dosya olarak taşıyabilen ve programı depolama
-aygıtları, e-posta ve benzeri yollarla dağıtmaya uygun bir arşiv dosyasıdır.
-<UL><LI>
-Bu arşiv içinden, arşiv hakkında bilgi alınabilecek dosyalara, bütün
-arşivi açmadan erişilebilmelidir.
-<LI>Mümkünse arşivin yaygın olarak bilinen ve kullanılan araçlarla açılabilmesinde
-yarar vardır.
-</UL>
-<LI>İkinci tip kaynak ise Internet yada yerel ağ üzerinden bir paket grubunun
-indeks bilgilerini ve kendilerini sunabilecek bir ``depo'' sunucusudur.
-<UL><LI>
-Depodaki değişikliklerin listesi, yerel paket listesiyle mümkün olan
-en az veri iletimi ile senkron edilebilmelidir. Bu ağ kaynaklarının
-verimli kullanımı ve yeni sürümlerin hızlıca takip edilebilmesi için
-gereklidir.
-</UL>
-<LI>Paketler birden fazla kaynaktan temin edilebilmelidir.
+Paket hazırlamak kolay olmalıdır. Paket hazırlanırken ve inşa edilirken
+gerekli dosyalar bir çok ayrı kaynaktan temin edilebilmelidir. 
+<LI>Pakete ait bilgiler iyi tanımlanmış bir formatta, kolayca erişilebilir
+olarak tutulmalıdır. Böylece paketleri işleyen araçlar yapmak kolaylaşacak,
+ilerde veri bağımlılığı sorunları olmayacaktır.
+<LI>Kolayca paket oluşturabilmek için, tercihen bir grafik arayüz ile
+paket hazırlanabilmelidir. Paket yöneticisi, üst geliştirici kodunu
+alıp, gerekli bilgileri hazırlatacak, gerekli işaretlemeleri kolayca
+yapabilecek bir araç sunmalıdır.
+<LI>Paket yöneticisinin geliştirme sistemi, paketleyici hatalarının gözden
+kaçmasını zorlaştıracak araçlar sunmalıdır.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
