--- a/web/projeler/pisi/pisi/node_7.html
+++ b/web/projeler/pisi/pisi/node_7.html
@@ -49,21 +49,19 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc7">2.5</A>&nbsp;&nbsp;Kurumsal Gereksinimler</H3>
+<H3><A NAME="htoc7">2.5</A>&nbsp;&nbsp;Güvenlik Gereksinimleri</H3>
 <UL><LI>
-Paket yöneticisi birden fazla paket kaynağı ile aynı anda sorunsuz
-bir şekilde çalışabilmelidir.
-<LI>Kurumlar ya da bireyler tarafından <EM>ön tanımlı depoda da bulunan</EM>
-kimi paketlerin değiştirilmiş versiyonlarının bulunduğu depolar <EM>overlay</EM>
-olarak tanımlanabilmelidir.
-<LI>Ön tanımlı depoda <EM>bulunmayan</EM> çeşitli paketlerin bulunduğu depolar
-<EM>addon</EM> olarak tanımlanabilmelidir.
+CD, Internet gibi değişik yollarla temin edilen paketlerin kim tarafından
+paketlendiği bilgisi ve içeriğinin yolda değişmediği garantisi için
+bir dijital imza sistemi desteklenmelidir.
+<LI>Gerektiğinde pakedi oluşturan kişinin imzası dışında, üçüncü parti
+kurum veya kişilerin de pakedi deneyip, güvendiğini belirtebilmesi
+için, birden fazla kişi tarafından pakedin imzalanabilmesi gereklidir.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_8.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
