--- a/web/projeler/pisi/pisi/node_9.html
+++ b/web/projeler/pisi/pisi/node_9.html
@@ -49,42 +49,40 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
-<H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
-Gürer Özen</H3>
+<H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
-<H2><A NAME="htoc9">4</A>&nbsp;&nbsp;PİSİ Tasarımı</H2>
-
-<H3><A NAME="htoc10">4.1</A>&nbsp;&nbsp;Paket Oluşturma</H3>
-Bu kısımda bir <B>PİSİ</B> paketinin oluşturulması ve kullanılması
-esnasında gerek duyulacak meta dosyalar ve süreçler netleştirilmeye
-çalışılmıştır.<BR>
+<H2><A NAME="htoc9">3</A>&nbsp;&nbsp;Neden PİSİ?</H2>
+Hali hazırda varolan ve geniş bir kullanım oranına sahip paket yöneticileri
+(RPM, DPKG ve Portage) yukarda saydığımız gereksinimlerin kimilerini
+bizim olması gerektiğini düşündüğümüz basitlikte yerine getirememekte,
+kimilerini de hiç vaad etmemektedirler. Bu paket yöneticilerinin geliştirilmesi
+ve istenen noktaya getirilmeye çalışılması yeni ve ayakları yere daha
+sağlam basan bir paket yöneticisini yeniden yazmaktan daha kolay değildir.<BR>
 <BR>
-
-<H4><A NAME="htoc11">4.1.1</A>&nbsp;&nbsp;PSPEC Dosyası</H4>
-<B>PSPEC (PİSİ SPECification)</B> dosyası paketin oluşturulması
-için gerekli olan temel bilgiyi tanımlar. Oluşturulacak paketin ne
-olduğu, kaynağı, kim tarafından paketlendiği, kaynağa uygulanan yamalar,
-hangi başka paketlere ne tür bağımlılıklar içerdiği gibi bilgileri
-içerir.<BR>
-<BR>
-Bir <B>PSPEC</B> dosyasından, dolayısı ile bir kaynaktan birden
-fazla paket oluşturulabilir. Örneğin kcontrol paketi kdebase-kaynaksürümü.paketsürümü.tar.gz
-kaynağından oluşturulabilecek yalnızca bir pakettir.<BR>
-<BR>
-Dosya biçimi XML'dir ve aşağıdaki etiketleri içerir. Her <B>PSPEC</B>
-dosyasında tüm etiketlerin bulunması zorunlu değildir. Bulunması zorunlu
-olan etiketler aşağıda (*) ile belirtilmiştir.<BR>
-<BR>
-<B>PSPEC</B> dosyaları <B>PSPEC</B> deposunda pakete ait dizinde
-<B>pspec.xml</B> adı ile tutulurlar.<BR>
-<BR>
-Her <B>PSPEC</B> dosyası <B>PİSİ</B> etiketi (tag) altında bir
-<EM>Source</EM> ve en az bir <EM>Package</EM> olmak üzere iki
-ana bölüm içermek zorundadırlar.<BR>
-<BR>
+Daha önemlisi, varolan paket yöneticilerinin paket formatlarında <EM>görev</EM>leri
+ve <EM>bilgi</EM>leri birbirinden düzgün bir biçimde ayrılmadıkları
+görülmektedir. Bu araçlar basit olarak hazırlanmış ve zaman içinde
+ortaya çıkan ihtiyaçları karşılamak için sürekli yeni özellikler eklenerek
+bugünkü hallerine gelmişlerdir. Bunun getirdiği karmaşıklığı temizlemek
+için aşağıdaki iki ilkeyi temel alan yeni bir paket yöneticisinin
+yazılmasına verilmiştir:
+<UL><LI>
+<B>Kurulum ve yapılandırma birbirinden ayrı iki görevdir</B>. Kurulum,
+yalnızca programların kurulumu, güncellenmesi ve kaldırılması esnasında
+iş görürken, yapılandırma hem kurulumda hem de çalışan sistemde söz
+konusudur. Bu ayrı görevleri sorumluluk sınırları belirlenmiş ayrı
+araçların yerine getirmesi uygundur. Uludağ projesi için yapılandırma
+işlerini yürütecek araç <B>ÇOMAR</B>'dır. <B>PİSİ</B> bu görevleri
+<B>ÇOMAR</B>'a devredecektir.
+<LI><B>Paket meta bilgileri ile paketin derlenme ve kurulumunu yöneten
+betikler iç içe geçmemelidir</B>. Varolan paket yöneticilerinde paket
+tanımlama dosyaları kod ile bilginin birbirine karıştığı, araçlarla
+işlemesi, içinden bilgi çıkarılması zor, net ve kesin tanımlanmamış
+biçimlerdedir.
+</UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_8.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_10.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
